--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
 
         <activity
             android:name=".ui.activity.base.MainActivity"
+            android:launchMode="singleTask"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -27,6 +28,8 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".ui.activity.account.LoginActivity" />
+        <activity android:name=".ui.activity.account.InfoActivity" />
         <activity android:name=".ui.activity.base.FragmentContainerActivity" />
         <activity android:name=".ui.activity.pic.PicActivity" />
         <!-- Don't forgot InitActivity -->
