--- a/config.gradle
+++ b/config.gradle
@@ -1,14 +1,15 @@
 ext {
 
-    android = [compileSdkVersion: 24,
-               buildToolsVersion: "24.0.3",
+    android = [compileSdkVersion: 25,
+               buildToolsVersion: "25.0.0",
                minSdkVersion    : 14,
-               targetSdkVersion : 24,
+               targetSdkVersion : 25,
                versionCode      : 2,
                versionName      : "1.0.2"]
 
     dependencies = ["appcompat-v7"           : "com.android.support:appcompat-v7:${SUPPORT_VERSION}",
                     "support-v4"             : "com.android.support:support-v4:${SUPPORT_VERSION}",
+                    "support-fragment"      : "com.android.support:support-fragment:${SUPPORT_VERSION}",
                     "annotation"             : "com.android.support:support-annotations:${SUPPORT_VERSION}",
                     "design"                 : "com.android.support:design:${SUPPORT_VERSION}",
                     "recyclerview-v7"        : "com.android.support:recyclerview-v7:${SUPPORT_VERSION}",
