--- a/build.gradle
+++ b/build.gradle
@@ -4,16 +4,17 @@ apply from: "config.gradle"
 buildscript {
     repositories {
         jcenter()
+        mavenCentral()
         //这里是 LeanCloud 的包仓库
         maven {
             url "http://mvn.leancloud.cn/nexus/content/repositories/releases"
         }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.1.3'
+        classpath 'com.android.tools.build:gradle:2.2.2'
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
         classpath 'me.tatarka:gradle-retrolambda:3.2.5'
-        classpath 'net.wequick.tools.build:gradle-small:0.9.0'
+        classpath 'com.squareup.sqldelight:gradle-plugin:0.5.0'
         classpath 'com.antfortune.freeline:gradle:0.7.0'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -23,6 +24,7 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        mavenCentral()
         //这里是 LeanCloud 的包仓库
         maven {
             url "http://mvn.leancloud.cn/nexus/content/repositories/releases"
@@ -34,8 +36,3 @@ task clean(type: Delete) {
     delete rootProject.buildDir
 }
 
-apply plugin: 'net.wequick.small'
-small {
-    aarVersion = '1.0.0'
-    strictSplitResources = false
-}
