--- a/config.gradle
+++ b/config.gradle
@@ -7,33 +7,34 @@ ext {
                versionCode      : 2,
                versionName      : "1.0.2"]
 
-    dependencies = ["appcompat-v7"           : "com.android.support:appcompat-v7:${SUPPORT_VERSION}",
-                    "support-v4"             : "com.android.support:support-v4:${SUPPORT_VERSION}",
-                    "support-fragment"      : "com.android.support:support-fragment:${SUPPORT_VERSION}",
-                    "annotation"             : "com.android.support:support-annotations:${SUPPORT_VERSION}",
-                    "design"                 : "com.android.support:design:${SUPPORT_VERSION}",
-                    "recyclerview-v7"        : "com.android.support:recyclerview-v7:${SUPPORT_VERSION}",
-                    "cardview-v7"            : "com.android.support:cardview-v7:${SUPPORT_VERSION}",
-                    "avoscloud-sdk"          : "cn.leancloud.android:avoscloud-sdk:v3.+",
-                    "avoscloud-statistics"   : "cn.leancloud.android:avoscloud-statistics:v3.+",
-                    "retrofit"               : "com.squareup.retrofit2:retrofit:2.1.0",
-                    "converter-gson"         : "com.squareup.retrofit2:converter-gson:2.1.0",
-                    "adapter-rxjava"         : "com.squareup.retrofit2:adapter-rxjava:2.1.0",
-                    "rxjava"                 : "io.reactivex:rxjava:1.0.14",
-                    "rxandroid"              : "io.reactivex:rxandroid:1.0.1",
-                    "rxlifecycle"            : "com.trello:rxlifecycle:0.8.0",
-                    "rxlifecycle-components" : "com.trello:rxlifecycle-components:0.8.0",
-                    "rxlifecycle-android"    : "com.trello:rxlifecycle-android:0.8.0",
-                    "gson"                   : "com.google.code.gson:gson:2.6.2",
-                    "commons-io"             : "commons-io:commons-io:1.4",
-                    "okhttp"                 : "com.squareup.okhttp3:okhttp:3.3.1",
-                    "glide"                  : "com.github.bumptech.glide:glide:3.7.0",
-                    "ThinDownloadManager"    : "com.mani:ThinDownloadManager:1.2.5",
-                    "javapoet"               : "com.squareup:javapoet:1.0.0",
-                    "dagger"                 : "com.google.dagger:dagger:2.4",
-                    "dagger-compiler"        : "com.google.dagger:dagger-compiler:2.4",
-                    "butterknife"            : "com.jakewharton:butterknife:8.1.0",
-                    "butterknife-compiler"   : "com.jakewharton:butterknife-compiler:8.1.0",
-                    "freeline:runtime"       : "com.antfortune.freeline:runtime:0.7.0",
-                    "freeline:runtime-no-op" : "com.antfortune.freeline:runtime-no-op:0.7.0"]
+    dependencies = ["appcompat-v7"             : "com.android.support:appcompat-v7:${SUPPORT_VERSION}",
+                    "support-v4"               : "com.android.support:support-v4:${SUPPORT_VERSION}",
+                    "support-fragment"        : "com.android.support:support-fragment:${SUPPORT_VERSION}",
+                    "annotation"               : "com.android.support:support-annotations:${SUPPORT_VERSION}",
+                    "design"                    : "com.android.support:design:${SUPPORT_VERSION}",
+                    "recyclerview-v7"          : "com.android.support:recyclerview-v7:${SUPPORT_VERSION}",
+                    "cardview-v7"              : "com.android.support:cardview-v7:${SUPPORT_VERSION}",
+                    "avoscloud-sdk"            : "cn.leancloud.android:avoscloud-sdk:v3.+",
+                    "avoscloud-statistics"    : "cn.leancloud.android:avoscloud-statistics:v3.+",
+                    "retrofit"                  : "com.squareup.retrofit2:retrofit:2.1.0",
+                    "converter-gson"           : "com.squareup.retrofit2:converter-gson:2.1.0",
+                    "adapter-rxjava"           : "com.squareup.retrofit2:adapter-rxjava:2.1.0",
+                    "rxjava"                    : "io.reactivex:rxjava:1.0.14",
+                    "rxandroid"                 : "io.reactivex:rxandroid:1.0.1",
+                    "rxlifecycle"               : "com.trello:rxlifecycle:0.8.0",
+                    "rxlifecycle-components"  : "com.trello:rxlifecycle-components:0.8.0",
+                    "rxlifecycle-android"      : "com.trello:rxlifecycle-android:0.8.0",
+                    "gson"                       : "com.google.code.gson:gson:2.6.2",
+                    "auto-value"                : "com.google.auto.value:auto-value:1.2",
+                    "commons-io"                : "commons-io:commons-io:1.4",
+                    "okhttp"                     : "com.squareup.okhttp3:okhttp:3.3.1",
+                    "glide"                      : "com.github.bumptech.glide:glide:3.7.0",
+                    "ThinDownloadManager"      : "com.mani:ThinDownloadManager:1.2.5",
+                    "javapoet"                   : "com.squareup:javapoet:1.0.0",
+                    "dagger"                     : "com.google.dagger:dagger:2.4",
+                    "dagger-compiler"           : "com.google.dagger:dagger-compiler:2.4",
+                    "butterknife"                : "com.jakewharton:butterknife:8.1.0",
+                    "butterknife-compiler"      : "com.jakewharton:butterknife-compiler:8.1.0",
+                    "freeline:runtime"           : "com.antfortune.freeline:runtime:0.7.0",
+                    "freeline:runtime-no-op"    : "com.antfortune.freeline:runtime-no-op:0.7.0"]
 }
