--- a/lib.base/build.gradle
+++ b/lib.base/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.library'
+apply plugin: 'com.squareup.sqldelight'
 
 android {
     compileSdkVersion rootProject.ext.android.compileSdkVersion
