--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.neenbedankt.android-apt'
 apply plugin: 'me.tatarka.retrolambda'
-apply plugin: 'com.squareup.sqldelight'
 apply plugin: 'com.antfortune.freeline'
 
 android {
@@ -58,6 +57,7 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile project(':model')
     compile project(':lib.base')
     compile project(':lib.vitamio')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
@@ -76,7 +76,8 @@ dependencies {
     compile rootProject.ext.dependencies["rxjava"]
     compile rootProject.ext.dependencies["rxandroid"]
     compile rootProject.ext.dependencies["gson"]
-    compile rootProject.ext.dependencies["auto-value"]
+    provided rootProject.ext.dependencies["auto-value"]
+    provided rootProject.ext.dependencies["threetenabp"]
     compile rootProject.ext.dependencies["okhttp"]
     compile rootProject.ext.dependencies["glide"]
     compile rootProject.ext.dependencies["javapoet"]
