--- a/config.gradle
+++ b/config.gradle
@@ -2,7 +2,7 @@ ext {
 
     android = [compileSdkVersion: 25,
                buildToolsVersion: "25.0.0",
-               minSdkVersion    : 14,
+               minSdkVersion    : 15,
                targetSdkVersion : 25,
                versionCode      : 2,
                versionName      : "1.0.2"]
@@ -25,7 +25,8 @@ ext {
                     "rxlifecycle-components"  : "com.trello:rxlifecycle-components:0.8.0",
                     "rxlifecycle-android"      : "com.trello:rxlifecycle-android:0.8.0",
                     "gson"                       : "com.google.code.gson:gson:2.6.2",
-                    "auto-value"                : "com.google.auto.value:auto-value:1.2",
+                    "auto-value"                : "com.google.auto.value:auto-value:1.3",
+                    "auto-value-parcel"        : "com.ryanharter.auto.value:auto-value-parcel:0.2.1",
                     "commons-io"                : "commons-io:commons-io:1.4",
                     "okhttp"                     : "com.squareup.okhttp3:okhttp:3.3.1",
                     "glide"                      : "com.github.bumptech.glide:glide:3.7.0",
@@ -33,6 +34,7 @@ ext {
                     "javapoet"                   : "com.squareup:javapoet:1.0.0",
                     "dagger"                     : "com.google.dagger:dagger:2.4",
                     "dagger-compiler"           : "com.google.dagger:dagger-compiler:2.4",
+                    "threetenabp"                : "com.jakewharton.threetenabp:threetenabp:1.0.4",
                     "butterknife"                : "com.jakewharton:butterknife:8.1.0",
                     "butterknife-compiler"      : "com.jakewharton:butterknife-compiler:8.1.0",
                     "freeline:runtime"           : "com.antfortune.freeline:runtime:0.7.0",
