--- a/config.gradle
+++ b/config.gradle
@@ -28,8 +28,10 @@ ext {
                     "okHttpLogging"            : "com.squareup.okhttp3:logging-interceptor:$okHttpVersion",
                     "sqlDelightRuntime"        : "com.squareup.sqldelight:runtime:$sqlDelightVersion",
 
+                    "otto"                     : "com.squareup:otto:1.3.8",
                     "retrofit"                 : "com.squareup.retrofit2:retrofit:2.1.0",
                     "converter-gson"           : "com.squareup.retrofit2:converter-gson:2.1.0",
+                    "adapter-rxjava"           : "com.squareup.retrofit2:adapter-rxjava:2.1.0",
                     "rxjava"                   : "io.reactivex:rxjava:1.2.1",
                     "rxandroid"                : "io.reactivex:rxandroid:1.2.1",
                     "rxjava2"                  : "io.reactivex.rxjava2:rxjava:2.0.0",
