--- a/lib.base/build.gradle
+++ b/lib.base/build.gradle
@@ -49,8 +49,9 @@ dependencies {
     compile rootProject.ext.dependencies["gson"]
     compile rootProject.ext.dependencies["retrofit"]
     compile rootProject.ext.dependencies["converter-gson"]
-    compile rootProject.ext.dependencies["retrofitRxJava2Adapter"]
+    compile rootProject.ext.dependencies["adapter-rxjava"]
 
+    compile rootProject.ext.dependencies["otto"]
     compile rootProject.ext.dependencies["rxjava"]
     compile rootProject.ext.dependencies["rxandroid"]
     compile rootProject.ext.dependencies["rxjava2"]
