--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,9 +63,8 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     testCompile 'junit:junit:4.12'
-    compile rootProject.ext.dependencies["support-v4"]
-    compile rootProject.ext.dependencies["design"]
-    compile rootProject.ext.dependencies["cardview-v7"]
+    compile rootProject.ext.dependencies["appcompat-v7"]
+    compile rootProject.ext.dependencies["systembartint"]
     compile rootProject.ext.dependencies["avoscloud-sdk"]
     compile rootProject.ext.dependencies["avoscloud-statistics"]
     compile rootProject.ext.dependencies["glide"]
