--- a/config.gradle
+++ b/config.gradle
@@ -23,6 +23,8 @@ ext {
                     "recyclerview-v7"          : "com.android.support:recyclerview-v7:$SUPPORT_VERSION",
                     "cardview-v7"              : "com.android.support:cardview-v7:$SUPPORT_VERSION",
 
+                    "systembartint"            : "com.readystatesoftware.systembartint:systembartint:1.0.3",
+
                     "dagger"                   : "com.google.dagger:dagger:$dagger2Version",
                     "okhttp"                   : "com.squareup.okhttp3:okhttp:$okHttpVersion",
                     "okHttpLogging"            : "com.squareup.okhttp3:logging-interceptor:$okHttpVersion",
