--- a/config.gradle
+++ b/config.gradle
@@ -28,6 +28,7 @@ ext {
                     "dagger"                   : "com.google.dagger:dagger:$dagger2Version",
                     "okhttp"                   : "com.squareup.okhttp3:okhttp:$okHttpVersion",
                     "okHttpLogging"            : "com.squareup.okhttp3:logging-interceptor:$okHttpVersion",
+                    "sqlBrite"                 : "com.squareup.sqlbrite:sqlbrite:0.8.0",
                     "sqlDelightRuntime"        : "com.squareup.sqldelight:runtime:$sqlDelightVersion",
 
                     "otto"                     : "com.squareup:otto:1.3.8",
