--- a/config.gradle
+++ b/config.gradle
@@ -40,15 +40,17 @@ ext {
                     "rxjava2"                  : "io.reactivex.rxjava2:rxjava:2.0.0",
                     "rxandroid2"               : "io.reactivex.rxjava2:rxandroid:2.0.0",
                     "retrofitRxJava2Adapter"   : "com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0",
+                    "rxpermissions"            : "com.tbruyelle.rxpermissions2:rxpermissions:0.8.2",
 
                     "rxlifecycle"              : "com.trello:rxlifecycle:0.8.0",
                     "rxlifecycle-components"   : "com.trello:rxlifecycle-components:0.8.0",
                     "rxlifecycle-android"      : "com.trello:rxlifecycle-android:0.8.0",
 
                     "fresco"                   : "com.facebook.fresco:fresco:0.14.1",
+                    "subsampling-scale-image"  : "com.davemorrissey.labs:subsampling-scale-image-view:3.6.0",
+                    "commons-io"               : "commons-io:commons-io:2.5",
+                    "progresspieview"          : "com.github.filippudak.progresspieview:library:1.0.4",
                     "gson"                     : "com.google.code.gson:gson:2.8.0",
-                    "commons-io"               : "commons-io:commons-io:1.4",
-                    "glide"                    : "com.github.bumptech.glide:glide:3.7.0",
                     "ThinDownloadManager"      : "com.mani:ThinDownloadManager:1.2.5",
                     "avoscloud-sdk"            : "cn.leancloud.android:avoscloud-sdk:v3.+",
                     "avoscloud-statistics"     : "cn.leancloud.android:avoscloud-statistics:v3.+",
