--- a/lib.base/build.gradle
+++ b/lib.base/build.gradle
@@ -49,6 +49,9 @@ dependencies {
     compile rootProject.ext.dependencies["sqlDelightRuntime"]
 
     compile rootProject.ext.dependencies["fresco"]
+    compile rootProject.ext.dependencies["subsampling-scale-image"]
+    compile rootProject.ext.dependencies["commons-io"]
+    compile rootProject.ext.dependencies["progresspieview"]
     compile rootProject.ext.dependencies["systembartint"]
 
     compile rootProject.ext.dependencies["gson"]
@@ -61,6 +64,7 @@ dependencies {
     compile rootProject.ext.dependencies["rxandroid"]
     compile rootProject.ext.dependencies["rxjava2"]
     compile rootProject.ext.dependencies["rxandroid2"]
+    compile rootProject.ext.dependencies["rxpermissions"]
 
     compile rootProject.ext.dependencies["threetenabp"]
     compile rootProject.ext.dependencies["timber"]
