--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,10 @@ android {
         manifestPlaceholders = [
                 SUPPORT_RTL: false
         ]
+        ndk {
+            // 设置支持的SO库架构
+            abiFilters 'armeabi', 'armeabi-v7a', 'arm64-v8a'
+        }
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
@@ -66,6 +70,8 @@ dependencies {
     compile rootProject.ext.dependencies["appcompat-v7"]
     compile rootProject.ext.dependencies["avoscloud-sdk"]
     compile rootProject.ext.dependencies["avoscloud-statistics"]
+    compile rootProject.ext.dependencies["bugly:upgrade"]
+    compile rootProject.ext.dependencies["bugly:ndk"]
 
     annotationProcessor rootProject.ext.aptDependencies["dagger-compiler"]
     annotationProcessor rootProject.ext.aptDependencies["butterknife-compiler"]
