--- a/config.gradle
+++ b/config.gradle
@@ -34,12 +34,12 @@ ext {
                     "otto"                     : "com.squareup:otto:1.3.8",
                     "retrofit"                 : "com.squareup.retrofit2:retrofit:2.1.0",
                     "converter-gson"           : "com.squareup.retrofit2:converter-gson:2.1.0",
-                    "adapter-rxjava"           : "com.squareup.retrofit2:adapter-rxjava:2.1.0",
                     "rxjava"                   : "io.reactivex:rxjava:1.2.1",
                     "rxandroid"                : "io.reactivex:rxandroid:1.2.1",
                     "rxjava2"                  : "io.reactivex.rxjava2:rxjava:2.0.0",
                     "rxandroid2"               : "io.reactivex.rxjava2:rxandroid:2.0.0",
                     "retrofitRxJava2Adapter"   : "com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0",
+                    "rxJava2Interop"           : "com.github.akarnokd:rxjava2-interop:0.9.4",
                     "rxpermissions"            : "com.tbruyelle.rxpermissions2:rxpermissions:0.8.2",
 
                     "rxlifecycle"              : "com.trello:rxlifecycle:0.8.0",
