--- a/build.gradle
+++ b/build.gradle
@@ -9,14 +9,14 @@ buildscript {
         maven {
             url "http://mvn.leancloud.cn/nexus/content/repositories/releases"
         }
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.0'
-        classpath 'me.tatarka:gradle-retrolambda:3.2.5'
+        classpath 'com.android.tools.build:gradle:3.0.1'
         classpath 'com.squareup.sqldelight:gradle-plugin:0.6.1'
-        classpath 'com.antfortune.freeline:gradle:0.8.3'
+        classpath 'com.antfortune.freeline:gradle:0.8.7'
         // tinkersupport插件
-        classpath "com.tencent.bugly:tinker-support:latest.release"
+        classpath "com.tencent.bugly:tinker-support:1.1.1"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -30,6 +30,7 @@ allprojects {
         maven {
             url "http://mvn.leancloud.cn/nexus/content/repositories/releases"
         }
+        google()
     }
 }
 
