--- a/config.gradle
+++ b/config.gradle
@@ -1,12 +1,12 @@
 ext {
 
-    compileSdkVersion = 25
-    buildToolsVersion = "25.0.0"
+    compileSdkVersion = 26
+    buildToolsVersion = "26.0.2"
     minSdkVersion     = 15
-    targetSdkVersion  = 25
+    targetSdkVersion  = 26
     versionCode       = 2
     versionName       = "1.0.2"
-    SUPPORT_VERSION = "25.0.0"
+    SUPPORT_VERSION = "26.1.0"
 
     multiDexVersion = '1.0.1'
     okHttpVersion = '3.4.1'
@@ -14,7 +14,8 @@ ext {
     butterknifeVersion = '8.1.0'
     stethoVersion = '1.4.1'
     sqlDelightVersion = '0.5.1'
-    freelineVersion = '0.8.3'
+    freelineVersion = '0.8.7'
+    buglyVersion = '3.3.1'
 
     dependencies = ["appcompat-v7"             : "com.android.support:appcompat-v7:$SUPPORT_VERSION",
                     "support-v4"               : "com.android.support:support-v4:$SUPPORT_VERSION",
@@ -65,9 +66,9 @@ ext {
                     "timber"                   : "com.jakewharton.timber:timber:4.3.1",
                     "butterknife"              : "com.jakewharton:butterknife:$butterknifeVersion",
 
-                    "bugly:sdk"                : "com.tencent.bugly:crashreport:latest.release",
-                    "bugly:ndk"                : "com.tencent.bugly:nativecrashreport:latest.release",
-                    "bugly:upgrade"            : "com.tencent.bugly:crashreport_upgrade:latest.release",
+                    "bugly:sdk"                : "com.tencent.bugly:crashreport:$buglyVersion",
+                    "bugly:ndk"                : "com.tencent.bugly:nativecrashreport:$buglyVersion",
+                    "bugly:upgrade"            : "com.tencent.bugly:crashreport_upgrade:1.3.4",
                     "freeline:runtime"         : "com.antfortune.freeline:runtime:$freelineVersion",
                     "freeline:runtime-no-op"   : "com.antfortune.freeline:runtime-no-op:$freelineVersion"]
 
