--- a/model/build.gradle
+++ b/model/build.gradle
@@ -40,18 +40,19 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile project(':lib.base')
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
-    testCompile 'junit:junit:4.12'
-    compile rootProject.ext.dependencies["threetenabp"]
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    api project(':lib.base')
+    api rootProject.ext.dependencies["threetenabp"]
 
-    provided rootProject.ext.aptDependencies["auto-value"]
-    provided rootProject.ext.aptDependencies["auto-gson"]
+    api rootProject.ext.aptDependencies["auto-value"]
+    api rootProject.ext.aptDependencies["auto-gson"]
 
     annotationProcessor rootProject.ext.aptDependencies["javapoet"]
     annotationProcessor rootProject.ext.aptDependencies["dagger-compiler"]
     annotationProcessor rootProject.ext.aptDependencies["auto-parcel"]
+
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:3.0.2', {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    })
+    testImplementation 'junit:junit:4.12'
 }
